# fureliza

./: .env.example  .gitignore  CLAUDE.md  CRO_LUXURY_ECOMMERCE_REPORT.md  next.config.ts  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: audit.md  deploy.md  new-product.md
.claude/rules/: accessibility.md  gsap.md  pipeline.md  security.md  seo.md
backend/: .env.example  .gitignore  docker-compose.yml
backend/services/catalog-service/: .dockerignore  Cargo.toml  Dockerfile
backend/services/catalog-service/src/: main.rs
docs/: AI_VIDEO_GENERATION_GUIDE.md  ARCHITECTURE_COMPARISON.md  BUSINESS_MODEL_RESEARCH.md  COMPREHENSIVE_CODE_REVIEW.md  FUR_ELIZA_MASTER_PLAN.md  PENDING.md  STATUS.md  TECH_RESEARCH.md  TECH_STACK_AUDIT_2026.md  THE_ONYX_PROTOCOL.md  VISION.md
docs/plans/: 2026-03-09-fur-eliza-design.md  2026-03-09-fur-eliza-implementation.md  2026-03-09-seo-research-report.md  2026-03-10-fur-eliza-site-structure-design.md  2026-03-10-fur-eliza-site-structure-plan.md  2026-04-01-catalog-automation-design.md  2026-04-02-compositor-implementation.md  2026-04-04-launch-roadmap-design.md
scripts/: extract-frames.sh  generate-placeholder-frames.mjs  generate-product.ts  generate-video.ts  pipeline.sh  process-frames.sh  tsconfig.json
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: Accordion.tsx  AnimatedSection.tsx  CTAWhatsApp.tsx  CartDrawer.tsx  Footer.tsx  FragranceMeter.tsx  HeroScroll.tsx  Navbar.tsx  ProductCard.tsx  ProductJsonLd.tsx  RelatedProducts.tsx  (+4 more)
(+14 files in other folders)
